# rlph

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  skills-lock.json
.agents/skills/prd-to-issues/: SKILL.md
.config/: nextest.toml
.github/workflows/: release.yml  rust.yml
.hooks/: pre-commit
.rlph/: config.toml
.rlph/docs/: architecture.md  conventions.md  testing.md
scripts/: ralph-github-loop.sh  worktree-setup.sh
scripts/ralph-prompts/: choose-issue.md  implement-issue.md  review-issue.md
src/: cli.rs  config.rs  deps.rs  error.rs  fix.rs  fix_comment.rs  lib.rs  main.rs  orchestrator.rs  plan.rs  prd.rs  process.rs  prompts.rs  review_schema.rs  runner.rs  sources.rs  state.rs  submission.rs  test_helpers.rs  worktree.rs
src/default_prompts/: _findings-schema.md  _pr-comments-footer.md  choose-issue.md  correctness-review-issue.md  fix-issue.md  hygiene-review-issue.md  implement-issue.md  plan.md  prd.md  review-aggregate-issue.md  review-fix-issue.md  review-issue.md  security-review-issue.md  style-review-issue.md
src/sources/: github.rs  linear.rs  mod.rs
tests/: claude_binary.rs  claude_runner_integration.rs  cli_binary.rs  codex_binary.rs  codex_runner_integration.rs  fix_integration.rs  opencode_binary.rs  orchestrator_integration.rs  plan_integration.rs  prd_integration.rs  process_integration.rs  prompt_rendering.rs  worktree_integration.rs
tests/common/: mod.rs
