[package]
name = "rlph"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
regex = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
